se agrega informacion en investigadores

--- a/investigadores.html
+++ b/investigadores.html
@@ -159,10 +159,10 @@
                             </div>
                         </div>
                         <div class="team-text">
-                            <h2>Nombre</h2>
+                            <h6>Nancy Teresa Cabrera Fernández</h6>
                             <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
                             <div class="info-container">
-                                <p>Profesión</p>
+                                <p>Profesora de tiempo completo</p>
                                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#teamModal">
                                     Ver más
                                 </button>
@@ -172,23 +172,33 @@
                 </div>
 
                <!-- Modal -->
+
+
+          <!-- Modal -->
 <div class="modal fade" id="teamModal" tabindex="-1" aria-labelledby="teamModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="teamModalLabel">Más Información</h5> 
+                <h5 class="modal-title" id="teamModalLabel">Más Información</h5>
             </div>
             <div class="modal-body">
-                <div style="display: flex; align-items: center;">
-                    <div style="flex: 1;">
-                        <p><strong>Nombre:</strong> Nombre del Miembro</p>
-                        <p><strong>Profesión:</strong> Detalle de la profesión</p>
-                        <p><strong>Biografía:</strong> Agregar más información sobre la persona, su experiencia y logros.</p>
+                <!-- Contenedor flexible para imagen y primer párrafo -->
+                <div class="d-flex align-items-start">
+                    <div class="flex-grow-1">
+                        <p><strong>Nombre:</strong> Nancy Teresa Cabrera Fernández</p>
+                        <p><strong>Profesión:</strong> Profesora de tiempo completo</p>
+                        <p><strong>Biodata:</strong> Ingeniera en Comunicaciones y Electrónica, egresada del Instituto Politécnico Nacional, Maestra en educación de la Universidad Interamericana para el Desarrollo. Profesora de Tiempo Completo Asociado B en la Universidad Tecnológica de Nezahualcóyotl (UTN). 
+                        </p>
                     </div>
-                    <div>
-                        <img src="img/investigadores/bfoto2.jpeg" alt="Foto del Miembro" style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
-                    </div>
+                    <img src="img/investigadores/bfoto2.jpeg" alt="Foto del Miembro" style="width: 215px; height: 280px; border-radius: 25px; margin-left: 10px;">
                 </div>
+
+                <!-- Párrafos ocupando todo el ancho -->
+                <p class="mt-3">Su participación dentro de la Universidad Tecnológica de Nezahualcóyotl por más de 27 años, se destaca por la formación de profesionistas en el área de Sistemas Informáticos, proporcionando asesoría académica a diferentes grupos y equipos de trabajo, brindando atención como tutora a estudiantes de la carrera de Sistemas Informáticos, asesora académica de diversos proyectos de titulación para nivel TSU e ingeniería, ha participado en la impartición de talleres en eventos académicos como la EXPROY, así como en la organización de la EXPROY, ha formado parte del jurado en diferentes exámenes de titulación a nivel Ingeniería.
+                </p>
+
+                <p>Fungió como presidente de la Academia de Programación en diferentes periodos, siendo este uno de sus cargos actuales, formó parte de la Comisión Técnica del Año de Investigación de la UTN, participó activamente como integrante del Programa Institucional de Tutorías, colaboradora en la organización del primer congreso Nacional de Tutorías de la Universidad Tecnológica de Nezahualcóyotl, y ponente en el Congreso Nacional de Tutorías de la Universidad de Monterrey, actualmente forma parte del CCI Universidad Saludable. 
+                </p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -196,7 +206,6 @@
         </div>
     </div>
 </div>
-
 
 
 
@@ -212,7 +221,7 @@
                             </div>
                         </div>
                         <div class="team-text">
-                            <h2>Nombre</h2>
+                            <h6>Carlos Perea Vargas</Canvas></h6>
                             <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
                             <div class="info-container">
                                 <p>Profesión</p>
@@ -264,10 +273,11 @@
                             </div>
                         </div>
                         <div class="team-text">
-                            <h2>Nombre</h2>
+                            <h6>Elvia María Hernández Espitia</h6>
                             <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
                             <div class="info-container">
-                                <p>Profesión</p>
+                                <p>Profesora de tiempo
+                                    completo</p>
                                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#teamModal2">
                                     Ver más
                                 </button>
@@ -276,33 +286,64 @@
                     </div>
                 </div>
 
-             <!-- Modal -->
-         <div class="modal fade" id="teamModal2" tabindex="-1" aria-labelledby="teamModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="teamModalLabel">Más Información</h5> 
+<!-- Modal -->
+<div class="modal fade" id="teamModal2" tabindex="-1" aria-labelledby="teamModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="teamModalLabel">Más Información</h5>
+            </div>
+            <div class="modal-body">
+                <!-- Contenedor flexible para imagen y primer párrafo -->
+                <div class="d-flex align-items-start">
+                    <div class="flex-grow-1">
+                        <p><strong>Nombre:</strong> Elvia María Hernández Espitia</p>
+                        <p><strong>Profesión:</strong> Profesora de tiempo completo</p>
+                        <p><strong>Biodata:</strong> Elvia María Hernández Espitia, docente con 20 años de experiencia trabajando con grupos de diferentes
+                            niveles educativos y 18 años en la Universidad Tecnológica de Nezahualcóyotl. Profesora de Tiempo
+                            Completo.
+                        </p>
                     </div>
-                    <div class="modal-body">
-                        <div style="display: flex; align-items: center;">
-                            <div style="flex: 1;">
-                                <p><strong>Nombre:</strong> Nombre del Miembro</p>
-                                <p><strong>Profesión:</strong> Detalle de la profesión</p>
-                                <p><strong>Biografía:</strong> Agregar más información sobre la persona, su experiencia y logros.</p>
-                            </div>
-                            <div>
-                                <img src="img/investigadores/bfoto1.jpeg" alt="Foto del Miembro" style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    </div>
+                    <img src="img/investigadores/bfoto1.jpeg" alt="Foto del Miembro" 
+                        style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
                 </div>
+
+                <!-- Párrafo separado para que ocupe todo el ancho -->
+                <p class="mt-3">
+                    Entre mis mayores habilidades, destaco la organización y adecuación de los contenidos
+                    curriculares, así como el liderazgo y empatía que fomento en el aula. Mi trabajo en equipo con el
+                    profesorado también es un aspecto sobresaliente de mi trayectoria.
+                </p>
+
+                <!-- Párrafos adicionales ocupando todo el ancho -->
+                <p>Entre las actividades que he desarrollado en la Universidad, se encuentran: brindar asesoría académica,
+                    mi participación como vocal y presidente en el proceso de estadías profesionales, tutoría de grupos,
+                    participación en el AST, presidencia de la academia de programación, coordinación del ciclo de
+                    conferencias EXPROY, donde generé vínculos con importantes empresarios del área de TI, la coordinación
+                    e instrucción de talleres, cursos propedéuticos y remediales, coordinadora y presentadora en el Ciclo de
+                    Conferencias Realidad Virtual y Aumentada, además de ser ponente en el Coloquio Estudiantil de
+                    Investigación UTN.
+                </p>
+
+                <p>
+                    Participo activamente en la difusión de la carrera con alumnos de nivel medio superior, realizo visitas
+                    industriales, soy mentora en el Hack4Edu el cual es un programa de educación digital de Fundación
+                    Telefónica y Fundación la Caixa de ámbito internacional, soy integrante del comité de protección
+                    civil de la División de Informática y Computación, Miembro del Comité ANUIES-TIC como Colaborador
+                    del Grupo de Seguridad de la Información, Instructora de la Academia CISCO-Conalep Chimalhuacán,
+                    Integrante del equipo de Tech Talk & Trending Now, Jurado evaluador del XXVII Concurso Nacional de
+                    Prototipos y Proyectos de Emprendimiento DGETI y miembro del CCI Universidad.
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             </div>
         </div>
+    </div>
+</div>
 
 
+            
 
 
                 <div class="col-lg-4 col-md-6">
@@ -317,7 +358,7 @@
                             </div>
                         </div>
                         <div class="team-text">
-                            <h2>Nombre</h2>
+                            <h6>Gerardo Pluma Bautista</h6>
                             <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
                             <div class="info-container">
                                 <p>Profesión</p>
@@ -366,10 +407,10 @@
                             </div>
                         </div>
                         <div class="team-text">
-                            <h2>Nombre</h2>
+                            <h6>Celia Magdalena Correa González</h6>
                             <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
                             <div class="info-container">
-                                <p>Profesión</p>
+                                <p>Profesora de tiempo completo</p>
                                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#teamModal4">
                                     Ver más
                                 </button>
@@ -378,31 +419,42 @@
                     </div>
                 </div>
 
-     <!-- Modal -->
-     <div class="modal fade" id="teamModal4" tabindex="-1" aria-labelledby="teamModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="teamModalLabel">Más Información</h5> 
-                </div>
-                <div class="modal-body">
-                    <div style="display: flex; align-items: center;">
-                        <div style="flex: 1;">
-                            <p><strong>Nombre:</strong> Nombre del Miembro</p>
-                            <p><strong>Profesión:</strong> Detalle de la profesión</p>
-                            <p><strong>Biografía:</strong> Agregar más información sobre la persona, su experiencia y logros.</p>
-                        </div>
-                        <div>
-                            <img src="img/investigadores/bfoto4.jpeg" alt="Foto del Miembro" style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
-                        </div>
+<!-- Modal -->
+<div class="modal fade" id="teamModal4" tabindex="-1" aria-labelledby="teamModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="teamModalLabel">Más Información</h5> 
+            </div>
+            <div class="modal-body">
+                <!-- Contenedor para la imagen y la primera parte del texto -->
+                <div class="d-flex align-items-start">
+                    <div class="flex-grow-1">
+                        <p><strong>Nombre:</strong> Celia Magdalena Correa González</p>
+                        <p><strong>Profesión:</strong> Profesora de tiempo completo</p>
+                        <p><strong>Biodata:</strong> Celia Magdalena Correa González. Profesora de Tiempo Completo en la Universidad Tecnológica de Nezahualcóyotl, en el área de inglés. He colaborado en diversos equipos de trabajo.</p>
                     </div>
+                    <img src="img/investigadores/bfoto4.jpeg" alt="Foto del Miembro" style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                </div>
+
+                <!-- Párrafo de borde a borde -->
+                <p class="mt-3">
+                    Operatividad académica y laboral de la institución por más de veintiocho años con aportaciones en el área de idiomas, vinculación con el sector de 
+                    servicios, actualización de planes y programas de estudio, capacitación, transferencia tecnológica 
+                    y docencia a través de participaciones como representante institucional.
+                </p>
+
+                <!-- Párrafos adicionales de borde a borde -->
+                <p>Actualmente formo parte del Comité Institucional de Tutorías, como coordinadora divisional; del Comité de Ética, como vocal docente y como vocal de la Academia Institucional de Lengua Extranjera. La participación como representante sindical del gremio docente de la UTN tiempo atrás, me ha llevado a interesarme en las condiciones de contratación de los trabajadores y su bienestar, particularmente en su salud laboral de una manera integral.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
             </div>
         </div>
     </div>
+</div>
+
+
 
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
@@ -416,7 +468,7 @@
                             </div>
                         </div>
                         <div class="team-text">
-                            <h2>Nombre</h2>
+                            <h6>Luis Manuel Fernández Hernández</h6>
                             <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
                             <div class="info-container">
                                 <p>Profesión</p>
