cambios en index

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                         Ser parte del CCI me ayudó a crecer profesionalmente.
                     </p>
                     
-                    <h2>Nombre</h2>
-                    <h3>Profesión</h3>
+                    <h2 class="text-center">Gerardo Pluma Bautista</h2>
+                    <h3>Profesor de tiempo completo</h3>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-img">
@@ -177,8 +177,8 @@
                     <p>
                         Participar en el CCI fue un reto muy enriquecedor.
                     </p>
-                    <h2>Nombre</h2>
-                    <h3>Profesión</h3>
+                    <h2 class="text-center">Carlos Perea Vargas</h2>
+                    <h3>Profesor de tiempo completo</h3>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-img">
@@ -187,8 +187,8 @@
                     <p>
                         La investigación en el CCI me dio gran aprendizaje.
                     </p>
-                    <h2>Nombre</h2>
-                    <h3>Profesión</h3>
+                    <h2 class="text-center">Nancy Teresa Cabrera Fernández</h2>
+                    <h3>Profesira de tiempo completo</h3>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-img">
@@ -197,8 +197,8 @@
                     <p>
                         En el CCI aprendí a resolver problemas complejos.
                     </p>
-                    <h2>Nombre</h2>
-                    <h3>Profesión</h3>
+                    <h2 class="text-center">Elvia María Hernández Espitia</h2>
+                    <h3>Profesora de tiempo completo</h3>
                 </div>
 
                 <div class="testimonial-item">
@@ -208,8 +208,9 @@
                     <p>
                         Con el CCI comprendí el impacto real del estudio.
                     </p>
-                    <h2>Nombre</h2>
-                    <h3>Profesión</h3>
+                    <h2 class="text-center">Celia Magdalena Correa González</h2>
+                    <h3 class="text-center">Profesora de tiempo completo</h3>
+                    
                 </div>
 
                 <div class="testimonial-item">
@@ -219,8 +220,8 @@
                     <p>
                         Estar en el CCI me permitió innovar con soluciones.
                     </p>
-                    <h2>Nombre</h2>
-                    <h3>Profesión</h3>
+                    <h2 class="text-center">Luis Manuel Fernández Hernández</h2>
+                    <h3>Profesor</h3>
                 </div>
 
                 <div class="testimonial-item">
