--- a/index.html
+++ b/index.html
@@ -351,10 +351,15 @@
 
     <div class="copyright d-flex justify-content-center align-items-center min-vh-50 text-center">
         <div>
-            <p>Copyright &copy; <a href="#">Universidad Saludable</a>, Todos los derechos reservados.</p>
-            <p>Diseñado por <a href="">11:11</a></p>
+            <a>Copyright &copy; <a href="#">Universidad Saludable</a>, Todos los derechos reservados.</a>
+            <p> </p>
+            <a>Diseñado por <a href="">11:11</a></a>
+            
         </div>
     </div>
+
+    <br>
+    <br>
 
     <!-- Footer End -->
 
