--- a/acervo.html
+++ b/acervo.html
@@ -1011,16 +1011,21 @@
 
 <br>
 
-    <!-- Footer Start -->
+   <!-- Footer Start -->
 
-    <div class="copyright d-flex justify-content-center align-items-center min-vh-50 text-center">
-        <div>
-            <p>Copyright &copy; <a href="#">Universidad Saludable</a>, Todos los derechos reservados.</p>
-            <p>Diseñado por <a href="">11:11</a></p>
-        </div>
+   <div class="copyright d-flex justify-content-center align-items-center min-vh-50 text-center">
+    <div>
+        <a>Copyright &copy; <a href="#">Universidad Saludable</a>, Todos los derechos reservados.</a>
+        <p> </p>
+        <a>Diseñado por <a href="">11:11</a></a>
+        
     </div>
+</div>
 
-    <!-- Footer End -->
+<br>
+<br>
+
+<!-- Footer End -->
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
