--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="carousel-text">
                         <h1>¿Quiénes <span>somos</span>?</h1>
                         <p>
-                            Información general del C.C.I.
+                            Somos un equipo comprometido con el bienestar docente
                         </p>
 
                     </div>
@@ -81,7 +81,7 @@
                     <div class="carousel-text">
                         <h1>¿Qué <span>es</span> el CCI?</h1>
                         <p>
-                            Información general sobre qué es el CCI.
+                            El Cuerpo Colegiado de Investigadores dedicados al desarrollo de soluciones para la mejora del bienestar en el trabajo docente
                         </p>
 
                     </div>
