--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -84,7 +84,7 @@
                     <div class="contenedor__login-register">
                         
                         <!--Login real    -->
-                        <form action="php/login_usuario_be.php" method = "POST" class="formulario__login">
+                        <form action="html/index.html" method = "POST" class="formulario__login">
                             <h2>Iniciar Sesión</h2>
                             <input type="text" placeholder="Correo Electronico" name = "correo">
                             <input type="password" placeholder="Contraseña" name = "contrasena">
