--- a/html/index.html
+++ b/html/index.html
@@ -1,40 +1,27 @@
 <!doctype html>
-
-<html lang="en" class="layout-menu-fixed layout-compact" data-assets-path="../assets/"
-  data-template="vertical-menu-template-free">
+<html lang="en" class="layout-menu-fixed layout-compact" data-assets-path="../assets/" data-template="vertical-menu-template-free">
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
   <title>ADMINISTRADOR | PERFIL</title>
-
   <meta name="description" content="" />
-
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="../img/utn-sincolor.png" />
-
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet" />
-
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../assets/vendor/fonts/iconify-icons.css" />
 
   <!-- Core CSS -->
   <!-- build:css assets/vendor/css/theme.css  -->
   <link rel="stylesheet" href="../assets/vendor/css/core.css" />
   <link rel="stylesheet" href="../assets/css/demo.css" />
-
   <!-- Vendors CSS -->
   <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-
   <!-- endbuild -->
   <link rel="stylesheet" href="../assets/vendor/libs/apex-charts/apex-charts.css" />
-
   <!-- Page CSS -->
   <!-- Helpers -->
   <script src="../assets/vendor/js/helpers.js"></script>
@@ -48,7 +35,6 @@
   <div class="layout-wrapper layout-content-navbar">
     <div class="layout-container">
       <!-- Menu -->
-
       <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
         <div class="app-brand demo">
           <a href="index.html" class="app-brand-link">
@@ -57,7 +43,6 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
                   <!-- CIRCULO -->
                   <circle cx="100" cy="100" r="90" fill="none" stroke="black" stroke-width="5" />
-
                   <!-- LIBRO-->
                   <rect x="40" y="80" width="120" height="40" rx="5" ry="5" fill="none" stroke="black"
                     stroke-width="2" />
@@ -68,16 +53,12 @@
             </span>
             <span class="app-brand-text demo menu-text fw-bold ms-2">Universidad Saludable</span>
           </a>
-
           <a href="javascript:void(0);" class="layout-menu-toggle menu-link text-large ms-auto">
             <i class="bx bx-chevron-left d-block d-xl-none align-middle"></i>
           </a>
         </div>
-
         <div class="menu-divider mt-0"></div>
-
         <div class="menu-inner-shadow"></div>
-
         <ul class="menu-inner py-1">
           <!-- Dashboards -->
           <li class="menu-item active open">
@@ -233,7 +214,7 @@
                     <div class="dropdown-divider my-1"></div>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="javascript:void(0);">
+                    <a class="dropdown-item" href="../inicioSesion.html">
                       <i class="icon-base bx bx-power-off icon-md me-3"></i><span>Log Out</span>
                     </a>
                   </li>
