--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="en" class="layout-menu-fixed layout-compact" data-assets-path="../assets/" data-template="vertical-menu-template-free">
+<html lang="en" class="layout-menu-fixed layout-compact" data-assets-path="../assets/"
+  data-template="vertical-menu-template-free">
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
   <title>ADMINISTRADOR | PERFIL</title>
   <meta name="description" content="" />
   <!-- Favicon -->
@@ -11,7 +13,9 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet" />
   <link rel="stylesheet" href="../assets/vendor/fonts/iconify-icons.css" />
 
   <!-- Core CSS -->
@@ -169,7 +173,7 @@
               <li class="nav-item navbar-dropdown dropdown-user dropdown">
                 <a class="nav-link dropdown-toggle hide-arrow p-0" href="javascript:void(0);" data-bs-toggle="dropdown">
                   <div class="avatar avatar-online">
-                    <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                    <img src="../img/utn-sincolor.png" alt class="w-px-40 h-auto rounded-circle" />
                   </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
@@ -178,12 +182,12 @@
                       <div class="d-flex">
                         <div class="flex-shrink-0 me-3">
                           <div class="avatar avatar-online">
-                            <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                            <img src="../img/utn-sincolor.png" alt class="w-px-40 h-auto rounded-circle" />
                           </div>
                         </div>
                         <div class="flex-grow-1">
                           <h6 class="mb-0">John Doe</h6>
-                          <small class="text-body-secondary">Admin</small>
+                          <small class="text-body-secondary">Administrador</small>
                         </div>
                       </div>
                     </a>
@@ -193,12 +197,12 @@
                   </li>
                   <li>
                     <a class="dropdown-item" href="#">
-                      <i class="icon-base bx bx-user icon-md me-3"></i><span>My Profile</span>
+                      <i class="icon-base bx bx-user icon-md me-3"></i><span>Mi perfil</span>
                     </a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="#">
-                      <i class="icon-base bx bx-cog icon-md me-3"></i><span>Settings</span>
+                      <i class="icon-base bx bx-cog icon-md me-3"></i><span>Ajustes</span>
                     </a>
                   </li>
                   <li>
@@ -254,7 +258,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xxl-4 col-lg-12 col-md-4 order-1">
+              <!-- <div class="col-xxl-4 col-lg-12 col-md-4 order-1">
                 <div class="row">
                   <div class="col-lg-6 col-md-12 col-6 mb-6">
                     <div class="card h-100">
@@ -275,8 +279,8 @@
                             </div>
                           </div>
                         </div>
-                        <p class="mb-1">Profit</p>
-                        <h4 class="card-title mb-3">$12,628</h4>
+                        <p class="mb-1">Cuestionarios</p>
+                        <h4 class="card-title mb-3">3</h4>
                         <small class="text-success fw-medium"><i class="icon-base bx bx-up-arrow-alt"></i>
                           +72.80%</small>
                       </div>
@@ -308,7 +312,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!-- Total Revenue -->
               <div class="col-12 col-xxl-8 order-2 order-md-3 order-xxl-2 mb-6 total-revenue">
                 <div class="card">
@@ -316,7 +320,7 @@
                     <div class="col-lg-8">
                       <div class="card-header d-flex align-items-center justify-content-between">
                         <div class="card-title mb-0">
-                          <h5 class="m-0 me-2">Total Revenue</h5>
+                          <h5 class="m-0 me-2">Cuestionarios elaborados</h5>
                         </div>
                         <div class="dropdown">
                           <button class="btn p-0" type="button" id="totalRevenue" data-bs-toggle="dropdown"
@@ -332,7 +336,7 @@
                       </div>
                       <div id="totalRevenueChart" class="px-3"></div>
                     </div>
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                       <div class="card-body px-xl-9 py-12 d-flex align-items-center flex-column">
                         <div class="text-center mb-6">
                           <div class="btn-group">
@@ -387,12 +391,12 @@
                           </div>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
               <!--/ Total Revenue -->
-              <div class="col-12 col-md-8 col-lg-12 col-xxl-4 order-3 order-md-2 profile-report">
+              <!-- <div class="col-12 col-md-8 col-lg-12 col-xxl-4 order-3 order-md-2 profile-report">
                 <div class="row">
                   <div class="col-6 mb-6 payments">
                     <div class="card h-100">
@@ -466,11 +470,11 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="row">
               <!-- Order Statistics -->
-              <div class="col-md-6 col-lg-4 col-xl-4 order-0 mb-6">
+              <!-- <div class="col-md-6 col-lg-4 col-xl-4 order-0 mb-6">
                 <div class="card h-100">
                   <div class="card-header d-flex justify-content-between">
                     <div class="card-title mb-0">
@@ -561,11 +565,11 @@
                     </ul>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!--/ Order Statistics -->
 
               <!-- Expense Overview -->
-              <div class="col-md-6 col-lg-4 order-1 mb-6">
+              <!-- <div class="col-md-6 col-lg-4 order-1 mb-6">
                 <div class="card h-100">
                   <div class="card-header nav-align-top">
                     <ul class="nav nav-pills flex-wrap row-gap-2" role="tablist">
@@ -616,11 +620,11 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!--/ Expense Overview -->
 
               <!-- Transactions -->
-              <div class="col-md-6 col-lg-4 order-2 mb-6">
+              <!-- <div class="col-md-6 col-lg-4 order-2 mb-6">
                 <div class="card h-100">
                   <div class="card-header d-flex align-items-center justify-content-between">
                     <h5 class="card-title m-0 me-2">Transactions</h5>
@@ -731,7 +735,7 @@
                     </ul>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <!--/ Transactions -->
             </div>
           </div>
