--- a/lineasinvestigacion.html
+++ b/lineasinvestigacion.html
@@ -294,7 +294,7 @@
             </div>
             <div class="modal-body">
                 <!-- Imagen añadida aquí -->
-                <img src="img/estres.jpeg" alt="Imagen de Estrés Laboral" class="img-fluid me-3 float-start" style="max-width: 200px;">               
+                <img src="img/estres3.jpeg" alt="Imagen de Estrés Laboral" class="img-fluid me-3 float-start" style="max-width: 200px;">               
                  <p style="text-align: justify;">La Organización Mundial de la Salud (OMS) define el estrés laboral como 
                     la respuesta que puede ocurrir cuando las exigencias del trabajo no se 
                     ajustan a las capacidades, los recursos o las necesidades del trabajador. 
@@ -304,7 +304,7 @@
             </div>
             <div class="modal-footer">
         <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
-            <a href="fprst_completo.pdf" class="enlace-blanco">Más información</a>
+            <a href="pdf/Estres_laboral.pdf" class="enlace-blanco">Más información</a>
         <br>
         <br>
         <!-- <a class ="btm custom-btn" Close -->
@@ -332,7 +332,7 @@
             </div>
             <div class="modal-footer">
         <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
-            <a href="fprst_completo.pdf" class="enlace-blanco">Más información</a>
+            <a href="pdf/Burnout.pdf" class="enlace-blanco">Más información</a>
         <br>
         <br>
         <!-- <a class ="btm custom-btn" Close -->
@@ -353,7 +353,7 @@
             </div>
             <div class="modal-body">
                 <!-- Imagen añadida aquí -->
-                <img src="img/fatiga.jpeg" alt="Imagen de Fatiga" class="img-fluid me-3 float-start" style="max-width: 200px;">               
+                <img src="img/Fatiga.jpeg" alt="Imagen de Fatiga" class="img-fluid me-3 float-start" style="max-width: 200px;">               
                  <p style="text-align: justify;">La fatiga nerviosa, también conocida como fatiga mental o agotamiento mental, es un estado de cansancio extremo que afecta 
                     la capacidad cognitiva y emocional de una persona. Se caracteriza por una disminución en la energía mental, dificultad para 
                     concentrarse, problemas de memoria y sensación de agotamiento, incluso después de un período de descanso.
@@ -361,7 +361,7 @@
             </div>
             <div class="modal-footer">
         <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
-            <a href="fprst_completo.pdf" class="enlace-blanco">Más información</a>
+            <a href="pdf/Fatiga.pdf" class="enlace-blanco">Más información</a>
         <br>
         <br>
         <!-- <a class ="btm custom-btn" Close -->
@@ -372,7 +372,7 @@
         <!-- End modal fatiga nerviosa-->
 
 
-<!-- Modal acoso -->
+<!-- Modal acoso laboral-->
 <div class="modal fade" id="acosoModal" tabindex="-1" aria-labelledby="acosoModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -390,7 +390,7 @@
             </div>
             <div class="modal-footer">
         <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
-            <a href="fprst_completo.pdf" class="enlace-blanco">Más información</a>
+            <a href="pdf/Acoso_laboral.pdf" class="enlace-blanco">Más información</a>
         <br>
         <br>
         <!-- <a class ="btm custom-btn" Close -->
@@ -420,7 +420,7 @@
             </div>
             <div class="modal-footer">
         <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
-            <a href="fprst_completo.pdf" class="enlace-blanco">Más información</a>
+            <a href="pdf/Workaholic.pdf" class="enlace-blanco">Más información</a>
         <br>
         <br>
         <!-- <a class ="btm custom-btn" Close -->
@@ -450,7 +450,7 @@
             </div>
             <div class="modal-footer">
         <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
-            <a href="fprst_completo.pdf" class="enlace-blanco">Más información</a>
+            <a href="pdf/Karoshi.pdf" class="enlace-blanco">Más información</a>
         <br>
         <br>
         <!-- <a class ="btm custom-btn" Close -->
@@ -479,7 +479,7 @@
             </div>
             <div class="modal-footer">
         <!--   <a class="btn custom-btn" href="">Book A Table</a> -->
-            <a href="fprst_completo.pdf" class="enlace-blanco">Más información</a>
+            <a href="pdf/FPST_INFO.pdf" class="enlace-blanco">Más información</a>
         <br>
         <br>
         <!-- <a class ="btm custom-btn" Close -->
