--- a/fpst.html
+++ b/fpst.html
@@ -107,7 +107,7 @@
                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
                     Realizar cuestionario
                 </button>
-                <a href="fprst_completo.pdf" class="btn btn-link">
+                <a href="pdf/Consentimiento.pdf" class="btn btn-link">
                     <i class="bi bi-file-earmark-pdf me-2"></i> Consentimiento informado
                 </a>
             </div>
