--- a/fpst.html
+++ b/fpst.html
@@ -96,7 +96,7 @@
             <div class="blog-meta">
                 <p><i class="far fa-user"></i> Desarrollado por los investigadores Sonja Sonnentang y Christoph Fritz.</p>
                 <p><i class="far fa-list-alt"></i> Categoría: Evaluación del estrés laboral</p>
-                <p><i class="far fa-calendar-alt"></i>Año: 2007</p>
+                <p><i class="far fa-calendar-alt"></i>2007</p>
             </div>
             <div class="blog-text">
                 <p>Evalua el estrés laboral y sus efectos. Basado en investigaciones previas este cuestionario mide diversos aspectos relacionados con las demandas y 
@@ -611,21 +611,30 @@
 <div class="col-md-6">
     <div class="blog-item">
         <div class="blog-img">
-            <img src="img/blog-2.jpg" alt="Blog">
+            <img src="img/Post_fatigasub.png" alt="Blog">
         </div>
         <div class="blog-content">
-            <h2 class="blog-title">Título de cuestionario.</h2>
+            <h2 class="blog-title">Cuestionario YOSREETAKE</h2>
             <div class="blog-meta">
-                <p><i class="far fa-user"></i> Nombre de quien publica</p>
-                <p><i class="far fa-list-alt"></i> Categoría</p>
-                <p><i class="far fa-calendar-alt"></i> 01-enero-2025</p>
+                <p><i class="far fa-user"></i> Desarrollado por el psicólogo japonés Yasuo Yamamoto</p>
+                <p><i class="far fa-list-alt"></i> Categoría: Evaluación de Fatiga subjetiva</p>
+                <p><i class="far fa-calendar-alt"></i> 1982</p>
             </div>
             <div class="blog-text">
-                <p>Descripción del cuestionario.</p>
+                <p>Este cuestionario esta diseñado específicamente para medir los síntomas de fatiga subjetiva que 
+                    experimentan los trabajadores, proporcionando una herramienta útil en la evaluación del 
+                    bienestar laboral y la gestión de la fatiga, un factor clave en el rendimiento y la salud 
+                    en el entorno laboral. Permite identificar posibles problemas de fatiga, estrés o agotamiento, 
+                    lo que puede contribuir a mejorar la productividad y la calidad de vida laboral.
+                </p>
                 <!-- Botón para abrir el modal -->
                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#testModal">
                     Realizar cuestionario
                 </button>
+                <a href="pdf/Consentimiento.pdf" class="btn btn-link">
+                    <i class="bi bi-file-earmark-pdf me-2"></i> Consentimiento informado
+                </a>
+
             </div>
         </div>
     </div>
